# HTTP-DBus-gateway

./: .gitignore  Dockerfile  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt
http_dbus_gateway/: __init__.py
http_dbus_gateway/static/css/: index.css
http_dbus_gateway/static/js/: app.js
static/: websocket.js
static/css/: index.css
static/html/: index.html
static/js/: app.js
